HTML files debugged

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
       href="node_modules/modern-normalize/modern-normalize.css"
     />
-    <link rel="stylesheet" href="/goit-markup-hw-02/css/index.css" />
+    <link rel="stylesheet" href="css/index.css" />
     <style>
       body {
         font-family: "Roboto", sans-serif;
@@ -26,7 +26,7 @@
   </head>
   <body>
     <header>
-      <a class="webstudio" href="/goit-markup-hw-02/index.html"
+      <a class="webstudio" href="index.html"
         ><span style="color: #2196f3">Web</span
         ><span style="color: #000000">Studio</span></a
       >
@@ -34,14 +34,10 @@
       <nav>
         <ul class="list">
           <li>
-            <a
-              style="color: var(--hover-color)"
-              href="/goit-markup-hw-02/index.html"
-              >Agencja</a
-            >
+            <a style="color: var(--hover-color)" href="index.html">Agencja</a>
           </li>
           <li>
-            <a href="/goit-markup-hw-02/portfolio.html">Portfolio</a>
+            <a href="portfolio.html">Portfolio</a>
           </li>
           <li><a href="#">Kontakt</a></li>
         </ul>
@@ -171,7 +167,7 @@
       </section>
     </main>
     <footer class="background-dark">
-      <a class="webstudio" href="/goit-markup-hw-02/index.html">
+      <a class="webstudio" href="index.html">
         <span style="color: #2196f3">Web</span
         ><span style="color: #ffffff">Studio</span></a
       >
