--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
       href="node_modules/modern-normalize/modern-normalize.css"
     />
-    <link rel="stylesheet" href="/goit-markup-hw-02/css/index.css" />
+    <link rel="stylesheet" href="css/index.css" />
     <style>
       body {
         font-family: "Roboto", sans-serif;
@@ -26,7 +26,7 @@
   </head>
   <body>
     <header>
-      <a class="webstudio" href="/goit-markup-hw-02/index.html">
+      <a class="webstudio" href="index.html">
         <span style="color: #2196f3">Web</span
         ><span style="color: #000000">Studio</span></a
       >
@@ -34,12 +34,10 @@
       <nav>
         <ul class="list">
           <li>
-            <a href="/goit-markup-hw-02/index.html">Agencja</a>
+            <a href="index.html">Agencja</a>
           </li>
           <li>
-            <a
-              style="color: var(--hover-color)"
-              href="/goit-markup-hw-02/portfolio.html"
+            <a style="color: var(--hover-color)" href="portfolio.html"
               >Portfolio</a
             >
           </li>
@@ -79,7 +77,7 @@
       <ul class="list">
         <li>
           <img
-            src="/goit-markup-hw-02/images/Portfolio/project1.jpg"
+            src="images/Portfolio/project1.jpg"
             alt="Technocrack - strona internetowa"
             width="370"
             height="294"
@@ -89,7 +87,7 @@
         </li>
         <li>
           <img
-            src="/goit-markup-hw-02/images/Portfolio/project2.jpg"
+            src="images/Portfolio/project2.jpg"
             alt="Grafika New Orlean vs Golden Star"
             width="370"
             height="294"
@@ -99,7 +97,7 @@
         </li>
         <li>
           <img
-            src="/goit-markup-hw-02/images/Portfolio/project3.jpg"
+            src="images/Portfolio/project3.jpg"
             alt="Restauracja Seafood - aplikacja"
             width="370"
             height="294"
@@ -109,7 +107,7 @@
         </li>
         <li>
           <img
-            src="/goit-markup-hw-02/images/Portfolio/project4.jpg"
+            src="images/Portfolio/project4.jpg"
             alt="Projekt Prime"
             width="370"
             height="294"
@@ -119,7 +117,7 @@
         </li>
         <li>
           <img
-            src="/goit-markup-hw-02/images/Portfolio/project5.jpg"
+            src="images/Portfolio/project5.jpg"
             alt="Projekt Boxes - aplikacja"
             width="370"
             height="294"
@@ -129,7 +127,7 @@
         </li>
         <li>
           <img
-            src="/goit-markup-hw-02/images/Portfolio/project6.jpg"
+            src="images/Portfolio/project6.jpg"
             alt="Inspiration has no Boarders - strona internetowa"
             width="370"
             height="294"
@@ -139,7 +137,7 @@
         </li>
         <li>
           <img
-            src="/goit-markup-hw-02/images/Portfolio/project7.jpg"
+            src="images/Portfolio/project7.jpg"
             alt="Magazyn Limited Edition"
             width="370"
             height="294"
@@ -149,7 +147,7 @@
         </li>
         <li>
           <img
-            src="/goit-markup-hw-02/images/Portfolio/project8.jpg"
+            src="images/Portfolio/project8.jpg"
             alt="Projekt LAB"
             width="370"
             height="294"
@@ -159,7 +157,7 @@
         </li>
         <li>
           <img
-            src="/goit-markup-hw-02/images/Portfolio/project9.jpg"
+            src="images/Portfolio/project9.jpg"
             alt="Growing Business - aplikacja"
             width="370"
             height="294"
@@ -170,7 +168,7 @@
       </ul>
     </div>
     <footer class="background-dark">
-      <a class="webstudio" href="/goit-markup-hw-02/index.html">
+      <a class="webstudio" href="index.html">
         <span style="color: #2196f3">Web</span
         ><span style="color: #ffffff">Studio</span></a
       >
