Header and hero alignment added

--- a/index.html
+++ b/index.html
@@ -26,35 +26,41 @@
   </head>
   <body>
     <header>
-      <a class="webstudio" href="index.html"
-        ><span style="color: #2196f3">Web</span
-        ><span style="color: #000000">Studio</span></a
-      >
+      <div class="container">
+        <a class="webstudio" href="index.html"
+          ><span style="color: #2196f3">Web</span
+          ><span style="color: #000000">Studio</span></a
+        >
 
-      <nav>
-        <ul class="list">
-          <li>
-            <a style="color: var(--hover-color)" href="index.html">Agencja</a>
-          </li>
-          <li>
-            <a href="portfolio.html">Portfolio</a>
-          </li>
-          <li><a href="#">Kontakt</a></li>
-        </ul>
-      </nav>
+        <nav>
+          <ul class="list navigation">
+            <li>
+              <a style="color: var(--hover-color)" href="index.html">Agencja</a>
+            </li>
+            <li>
+              <a href="portfolio.html">Portfolio</a>
+            </li>
+            <li><a href="#">Kontakt</a></li>
+          </ul>
+        </nav>
 
-      <a class="contact-links-header" href="mailto:info@devstudio.com"
-        >info@devstudio.com</a
-      >
-      <a class="contact-links-header" href="tel:+48111111111"
-        >+48 111 111 111</a
-      >
+        <a class="contact-links-header" href="mailto:info@devstudio.com"
+          >info@devstudio.com</a
+        >
+        <a class="contact-links-header" href="tel:+48111111111"
+          >+48 111 111 111</a
+        >
+      </div>
     </header>
     <main>
       <!-- Hero -->
       <section class="background-dark">
-        <h1 class="main-heading">EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
-        <button class="hero-button" type="button">Zamów usługę</button>
+        <div class="container hero">
+          <h1 class="main-heading">
+            EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU
+          </h1>
+          <button class="hero-button" type="button">Zamów usługę</button>
+        </div>
       </section>
       <!-- Jakiś tekst -->
       <div>
