--- a/portfolio.html
+++ b/portfolio.html
@@ -26,31 +26,33 @@
   </head>
   <body>
     <header>
-      <a class="webstudio" href="index.html">
-        <span style="color: #2196f3">Web</span
-        ><span style="color: #000000">Studio</span></a
-      >
+      <div class="container">
+        <a class="webstudio" href="index.html">
+          <span style="color: #2196f3">Web</span
+          ><span style="color: #000000">Studio</span></a
+        >
 
-      <nav>
-        <ul class="list">
-          <li>
-            <a href="index.html">Agencja</a>
-          </li>
-          <li>
-            <a style="color: var(--hover-color)" href="portfolio.html"
-              >Portfolio</a
-            >
-          </li>
-          <li><a href="#">Kontakt</a></li>
-        </ul>
-      </nav>
+        <nav>
+          <ul class="list navigation">
+            <li>
+              <a href="index.html">Agencja</a>
+            </li>
+            <li>
+              <a style="color: var(--hover-color)" href="portfolio.html"
+                >Portfolio</a
+              >
+            </li>
+            <li><a href="#">Kontakt</a></li>
+          </ul>
+        </nav>
 
-      <a class="contact-links-header" href="mailto:info@devstudio.com"
-        >info@devstudio.com</a
-      >
-      <a class="contact-links-header" href="tel:+48111111111"
-        >+48 111 111 111</a
-      >
+        <a class="contact-links-header" href="mailto:info@devstudio.com"
+          >info@devstudio.com</a
+        >
+        <a class="contact-links-header" href="tel:+48111111111"
+          >+48 111 111 111</a
+        >
+      </div>
     </header>
     <!-- Przyciski filtra -->
     <div>
