--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         font-family: "Roboto", sans-serif;
         color: #212121;
         background: #ffffff;
+        width: 100%;
       }
     </style>
     <meta charset="UTF-8" />
@@ -63,129 +64,139 @@
         </div>
       </section>
       <!-- Jakiś tekst -->
-      <div>
-        <ul class="list">
-          <li>
-            <h3 class="tertiary-heading">LOREM IPSUM</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-              arcu sem. Sed non sodales dui. Interdum et malesuada
-            </p>
-          </li>
-          <li>
-            <h3 class="tertiary-heading">LOREM IPSUM</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-              arcu sem. Sed non sodales dui. Interdum et malesuada
-            </p>
-          </li>
-          <li>
-            <h3 class="tertiary-heading">LOREM IPSUM</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-              arcu sem. Sed non sodales dui. Interdum et malesuada
-            </p>
-          </li>
-          <li>
-            <h3 class="tertiary-heading">LOREM IPSUM</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-              arcu sem. Sed non sodales dui. Interdum et malesuada
-            </p>
-          </li>
-        </ul>
-      </div>
+      <section>
+        <div class="container section">
+          <ul class="list lorem-list">
+            <li>
+              <h3 class="tertiary-heading">LOREM IPSUM</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                arcu sem. Sed non sodales dui. Interdum et malesuada
+              </p>
+            </li>
+            <li>
+              <h3 class="tertiary-heading">LOREM IPSUM</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                arcu sem. Sed non sodales dui. Interdum et malesuada
+              </p>
+            </li>
+            <li>
+              <h3 class="tertiary-heading">LOREM IPSUM</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                arcu sem. Sed non sodales dui. Interdum et malesuada
+              </p>
+            </li>
+            <li>
+              <h3 class="tertiary-heading">LOREM IPSUM</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                arcu sem. Sed non sodales dui. Interdum et malesuada
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
       <!-- Czym się zajmujemy -->
       <section>
-        <h2 class="secondary-heading">Czym się zajmujemy</h2>
-        <ul class="list">
-          <li>
-            <img
-              src="images/What_do_we_do/Computer.jpg"
-              alt="Komputer"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li>
-            <img
-              src="images/What_do_we_do/Laptop.jpg"
-              alt="Laptop"
-              width="370"
-              height="294"
-            />
-          </li>
-          <li>
-            <img
-              src="images/What_do_we_do/Tablet.jpg"
-              alt="Tablet"
-              width="370"
-              height="294"
-            />
-          </li>
-        </ul>
+        <div class="container section activity">
+          <h2 class="secondary-heading">Czym się zajmujemy</h2>
+          <ul class="list">
+            <li>
+              <img
+                src="images/What_do_we_do/Computer.jpg"
+                alt="Komputer"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li>
+              <img
+                src="images/What_do_we_do/Laptop.jpg"
+                alt="Laptop"
+                width="370"
+                height="294"
+              />
+            </li>
+            <li>
+              <img
+                src="images/What_do_we_do/Tablet.jpg"
+                alt="Tablet"
+                width="370"
+                height="294"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Nasz zespół -->
       <section style="background-color: #f5f4fa">
-        <h2 class="secondary-heading">Nasz zespół</h2>
-        <ul class="list">
-          <li>
-            <img
-              src="images/Our_staff/John1.jpg"
-              alt="John Doe"
-              width="270"
-              height="260"
-            />
-            <p class="john-doe">John Doe</p>
-            <p class="john-doe-job">Product Designer</p>
-          </li>
-          <li>
-            <img
-              src="images/Our_staff/John2.jpg"
-              alt="John Doe"
-              width="270"
-              height="260"
-            />
-            <p class="john-doe">John Doe</p>
-            <p class="john-doe-job">Frontend Developer</p>
-          </li>
-          <li>
-            <img
-              src="images/Our_staff/John3.jpg"
-              alt="John Doe"
-              width="270"
-              height="260"
-            />
-            <p class="john-doe">John Doe</p>
-            <p class="john-doe-job">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="images/Our_staff/John4.jpg"
-              alt="John Doe"
-              width="270"
-              height="260"
-            />
-            <p class="john-doe">John Doe</p>
-            <p class="john-doe-job">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container section activity">
+          <h2 class="secondary-heading">Nasz zespół</h2>
+          <ul class="list">
+            <li>
+              <img
+                src="images/Our_staff/John1.jpg"
+                alt="John Doe"
+                width="270"
+                height="260"
+              />
+              <p class="john-doe">John Doe</p>
+              <p class="john-doe-job">Product Designer</p>
+            </li>
+            <li>
+              <img
+                src="images/Our_staff/John2.jpg"
+                alt="John Doe"
+                width="270"
+                height="260"
+              />
+              <p class="john-doe">John Doe</p>
+              <p class="john-doe-job">Frontend Developer</p>
+            </li>
+            <li>
+              <img
+                src="images/Our_staff/John3.jpg"
+                alt="John Doe"
+                width="270"
+                height="260"
+              />
+              <p class="john-doe">John Doe</p>
+              <p class="john-doe-job">Marketing</p>
+            </li>
+            <li>
+              <img
+                src="images/Our_staff/John4.jpg"
+                alt="John Doe"
+                width="270"
+                height="260"
+              />
+              <p class="john-doe">John Doe</p>
+              <p class="john-doe-job">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="background-dark">
-      <a class="webstudio" href="index.html">
-        <span style="color: #2196f3">Web</span
-        ><span style="color: #ffffff">Studio</span></a
-      >
+      <div class="container">
+        <a class="webstudio" href="index.html">
+          <span style="color: #2196f3">Web</span
+          ><span style="color: #ffffff">Studio</span></a
+        >
 
-      <address class="city-street">m. Warszawa, Aleje Jerozolimskie 21</address>
+        <address class="city-street">
+          m. Warszawa, Aleje Jerozolimskie 21
+        </address>
 
-      <a class="contact-links-footer" href="mailto:info@example.com"
-        >info@example.com</a
-      >
-      <a class="contact-links-footer" href="tel:+48111111111"
-        >+48 111 111 111</a
-      >
+        <a class="contact-links-footer" href="mailto:info@example.com"
+          >info@example.com</a
+        >
+        <a class="contact-links-footer" href="tel:+48111111111"
+          >+48 111 111 111</a
+        >
+      </div>
     </footer>
   </body>
 </html>
