New styles added

--- a/portfolio.html
+++ b/portfolio.html
@@ -171,8 +171,8 @@
       </ul>
     </div>
     <footer class="background-dark">
-      <div class="container">
-        <a class="webstudio" href="index.html">
+      <div class="container foot">
+        <a class="webstudio-foot" href="index.html">
           <span style="color: #2196f3">Web</span
           ><span style="color: #ffffff">Studio</span></a
         >
