--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
   </head>
   <body>
     <header>
-      <div class="container">
-        <a class="webstudio" href="index.html"
-          ><span style="color: #2196f3">Web</span
-          ><span style="color: #000000">Studio</span></a
-        >
+      <div class="container head">
+        <nav class="logo-navigation">
+          <a class="webstudio" href="index.html"
+            ><span style="color: #2196f3">Web</span
+            ><span style="color: #000000">Studio</span></a
+          >
 
-        <nav>
           <ul class="list navigation">
             <li>
               <a style="color: var(--hover-color)" href="index.html">Agencja</a>
@@ -45,12 +45,18 @@
           </ul>
         </nav>
 
-        <a class="contact-links-header" href="mailto:info@devstudio.com"
-          >info@devstudio.com</a
-        >
-        <a class="contact-links-header" href="tel:+48111111111"
-          >+48 111 111 111</a
-        >
+        <ul class="list">
+          <li>
+            <a class="contact-links-header" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="contact-links-header" href="tel:+48111111111"
+              >+48 111 111 111</a
+            >
+          </li>
+        </ul>
       </div>
     </header>
     <main>
@@ -135,7 +141,7 @@
         <div class="container section activity">
           <h2 class="secondary-heading">Nasz zespół</h2>
           <ul class="list">
-            <li>
+            <li class="card-staff">
               <img
                 src="images/Our_staff/John1.jpg"
                 alt="John Doe"
@@ -145,7 +151,7 @@
               <p class="john-doe">John Doe</p>
               <p class="john-doe-job">Product Designer</p>
             </li>
-            <li>
+            <li class="card-staff">
               <img
                 src="images/Our_staff/John2.jpg"
                 alt="John Doe"
@@ -155,7 +161,7 @@
               <p class="john-doe">John Doe</p>
               <p class="john-doe-job">Frontend Developer</p>
             </li>
-            <li>
+            <li class="card-staff">
               <img
                 src="images/Our_staff/John3.jpg"
                 alt="John Doe"
@@ -165,7 +171,7 @@
               <p class="john-doe">John Doe</p>
               <p class="john-doe-job">Marketing</p>
             </li>
-            <li>
+            <li class="card-staff">
               <img
                 src="images/Our_staff/John4.jpg"
                 alt="John Doe"
@@ -180,8 +186,8 @@
       </section>
     </main>
     <footer class="background-dark">
-      <div class="container">
-        <a class="webstudio" href="index.html">
+      <div class="container foot">
+        <a class="webstudio-foot" href="index.html">
           <span style="color: #2196f3">Web</span
           ><span style="color: #ffffff">Studio</span></a
         >
@@ -193,6 +199,7 @@
         <a class="contact-links-footer" href="mailto:info@example.com"
           >info@example.com</a
         >
+
         <a class="contact-links-footer" href="tel:+48111111111"
           >+48 111 111 111</a
         >
