--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
             ><span style="color: #2196f3">Web</span
             ><span style="color: #000000">Studio</span></a
           >
-
           <ul class="list navigation">
             <li>
               <a style="color: var(--hover-color)" href="index.html">Agencja</a>
@@ -45,16 +44,14 @@
           </ul>
         </nav>
 
-        <ul class="list">
+        <ul class="list contact-links-header">
           <li>
-            <a class="contact-links-header" href="mailto:info@devstudio.com"
+            <a class="link-header" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="contact-links-header" href="tel:+48111111111"
-              >+48 111 111 111</a
-            >
+            <a class="link-header" href="tel:+48111111111">+48 111 111 111</a>
           </li>
         </ul>
       </div>
@@ -106,7 +103,7 @@
       </section>
       <!-- Czym się zajmujemy -->
       <section>
-        <div class="container section activity">
+        <div class="container section activity top-padding-none">
           <h2 class="secondary-heading">Czym się zajmujemy</h2>
           <ul class="list">
             <li>
