--- a/portfolio.html
+++ b/portfolio.html
@@ -27,13 +27,12 @@
   </head>
   <body>
     <header>
-      <div class="container header-border">
-        <a class="webstudio" href="index.html">
-          <span style="color: #2196f3">Web</span
-          ><span style="color: #000000">Studio</span></a
-        >
-
-        <nav>
+      <div class="container head">
+        <nav class="logo-navigation">
+          <a class="webstudio" href="index.html">
+            <span style="color: #2196f3">Web</span
+            ><span style="color: #000000">Studio</span></a
+          >
           <ul class="list navigation">
             <li>
               <a href="index.html">Agencja</a>
@@ -46,13 +45,16 @@
             <li><a href="#">Kontakt</a></li>
           </ul>
         </nav>
-
-        <a class="contact-links-header" href="mailto:info@devstudio.com"
-          >info@devstudio.com</a
-        >
-        <a class="contact-links-header" href="tel:+48111111111"
-          >+48 111 111 111</a
-        >
+        <ul class="list contact-links-header">
+          <li>
+            <a class="link-header" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="link-header" href="tel:+48111111111">+48 111 111 111</a>
+          </li>
+        </ul>
       </div>
     </header>
     <!-- Przyciski filtra -->
