--- a/portfolio.html
+++ b/portfolio.html
@@ -78,8 +78,8 @@
       </ul>
     </div>
     <!-- Sekcja ze zdjęciami -->
-    <div>
-      <ul class="list">
+    <div class="container">
+      <ul class="list projects">
         <li>
           <img
             src="images/Portfolio/project1.jpg"
@@ -87,8 +87,10 @@
             width="370"
             height="294"
           />
-          <h3 class="projects-headings">Technocrack</h3>
-          <p class="projects-descriptions">Strona internetowa</p>
+          <div class="projects-box">
+            <h3 class="projects-headings">Technocrack</h3>
+            <p class="projects-descriptions">Strona internetowa</p>
+          </div>
         </li>
         <li>
           <img
@@ -97,8 +99,10 @@
             width="370"
             height="294"
           />
-          <h3 class="projects-headings">Grafika New Orlean vs Golden Star</h3>
-          <p class="projects-descriptions">Dizajn</p>
+          <div class="projects-box">
+            <h3 class="projects-headings">Grafika New Orlean vs Golden Star</h3>
+            <p class="projects-descriptions">Dizajn</p>
+          </div>
         </li>
         <li>
           <img
@@ -107,8 +111,10 @@
             width="370"
             height="294"
           />
-          <h3 class="projects-headings">Restauracja Seafood</h3>
-          <p class="projects-descriptions">Aplikacja</p>
+          <div class="projects-box">
+            <h3 class="projects-headings">Restauracja Seafood</h3>
+            <p class="projects-descriptions">Aplikacja</p>
+          </div>
         </li>
         <li>
           <img
@@ -117,8 +123,10 @@
             width="370"
             height="294"
           />
-          <h3 class="projects-headings">Projekt Prime</h3>
-          <p class="projects-descriptions">Marketing</p>
+          <div class="projects-box">
+            <h3 class="projects-headings">Projekt Prime</h3>
+            <p class="projects-descriptions">Marketing</p>
+          </div>
         </li>
         <li>
           <img
@@ -127,8 +135,10 @@
             width="370"
             height="294"
           />
-          <h3 class="projects-headings">Projekt Boxes</h3>
-          <p class="projects-descriptions">Aplikacja</p>
+          <div class="projects-box">
+            <h3 class="projects-headings">Projekt Boxes</h3>
+            <p class="projects-descriptions">Aplikacja</p>
+          </div>
         </li>
         <li>
           <img
@@ -137,8 +147,10 @@
             width="370"
             height="294"
           />
-          <h3 class="projects-headings">Inspiration has no Borders</h3>
-          <p class="projects-descriptions">Strona internetowa</p>
+          <div class="projects-box">
+            <h3 class="projects-headings">Inspiration has no Borders</h3>
+            <p class="projects-descriptions">Strona internetowa</p>
+          </div>
         </li>
         <li>
           <img
@@ -147,8 +159,10 @@
             width="370"
             height="294"
           />
-          <h3 class="projects-headings">Magazyn Limited Edition</h3>
-          <p class="projects-descriptions">Dizajn</p>
+          <div class="projects-box">
+            <h3 class="projects-headings">Magazyn Limited Edition</h3>
+            <p class="projects-descriptions">Dizajn</p>
+          </div>
         </li>
         <li>
           <img
@@ -157,8 +171,10 @@
             width="370"
             height="294"
           />
-          <h3 class="projects-headings">Projekt LAB</h3>
-          <p class="projects-descriptions">Marketing</p>
+          <div class="projects-box">
+            <h3 class="projects-headings">Projekt LAB</h3>
+            <p class="projects-descriptions">Marketing</p>
+          </div>
         </li>
         <li>
           <img
@@ -167,8 +183,10 @@
             width="370"
             height="294"
           />
-          <h3 class="projects-headings">Growing Business</h3>
-          <p class="projects-descriptions">Aplikacja</p>
+          <div class="projects-box">
+            <h3 class="projects-headings">Growing Business</h3>
+            <p class="projects-descriptions">Aplikacja</p>
+          </div>
         </li>
       </ul>
     </div>
@@ -190,7 +208,6 @@
           >+48 111 111 111</a
         >
       </div>
-      >
     </footer>
   </body>
 </html>
