All files debugged

--- a/portfolio.html
+++ b/portfolio.html
@@ -9,24 +9,19 @@
     />
     <link
       rel="stylesheet"
-      href="node_modules/modern-normalize/modern-normalize.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="css/index.css" />
-    <style>
-      body {
-        font-family: "Roboto", sans-serif;
-        color: #212121;
-        background: #ffffff;
-        width: 100%;
-      }
-    </style>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
   </head>
   <body>
-    <header>
+    <header style="border-bottom: 1px solid #ececec">
       <div class="container head">
         <nav class="logo-navigation">
           <a class="webstudio" href="index.html">
