Styles moved from HTML to CSS

--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
     <title>Studio</title>
   </head>
   <body>
-    <header style="border-bottom: 1px solid #ececec">
+    <header class="header-line">
       <div class="container head">
         <nav class="logo-navigation">
           <a class="webstudio" href="index.html"
-            ><span style="color: #2196f3">Web</span
-            ><span style="color: #000000">Studio</span></a
+            ><span class="logo-web">Web</span
+            ><span class="logo-studio-head">Studio</span></a
           >
           <ul class="list navigation">
             <li>
-              <a style="color: var(--hover-color)" href="index.html">Agencja</a>
+              <a class="agency-active" href="index.html">Agencja</a>
             </li>
             <li>
               <a href="portfolio.html">Portfolio</a>
@@ -129,7 +129,7 @@
         </div>
       </section>
       <!-- Nasz zespół -->
-      <section style="background-color: #f5f4fa">
+      <section class="background-staff">
         <div class="container section activity">
           <h2 class="secondary-heading">Nasz zespół</h2>
           <ul class="list">
@@ -180,8 +180,8 @@
     <footer class="background-dark">
       <div class="container foot">
         <a class="webstudio-foot" href="index.html">
-          <span style="color: #2196f3">Web</span
-          ><span style="color: #ffffff">Studio</span></a
+          <span class="logo-web">Web</span
+          ><span class="logo-studio-foot">Studio</span></a
         >
 
         <address class="city-street">
