--- a/portfolio.html
+++ b/portfolio.html
@@ -21,21 +21,19 @@
     <title>Portfolio</title>
   </head>
   <body>
-    <header style="border-bottom: 1px solid #ececec">
+    <header class="header-line">
       <div class="container head">
         <nav class="logo-navigation">
           <a class="webstudio" href="index.html">
-            <span style="color: #2196f3">Web</span
-            ><span style="color: #000000">Studio</span></a
+            <span class="logo-web">Web</span
+            ><span class="logo-studio-head">Studio</span></a
           >
           <ul class="list navigation">
             <li>
               <a href="index.html">Agencja</a>
             </li>
             <li>
-              <a style="color: var(--hover-color)" href="portfolio.html"
-                >Portfolio</a
-              >
+              <a class="portfolio-active" href="portfolio.html">Portfolio</a>
             </li>
             <li><a href="#">Kontakt</a></li>
           </ul>
@@ -188,8 +186,8 @@
     <footer class="background-dark">
       <div class="container foot">
         <a class="webstudio-foot" href="index.html">
-          <span style="color: #2196f3">Web</span
-          ><span style="color: #ffffff">Studio</span></a
+          <span class="logo-web">Web</span
+          ><span class="logo-studio-foot">Studio</span></a
         >
 
         <address class="city-street">
